Minor clarifying comments

--- a/data_cleaning/diabetes_dataset.ipynb
+++ b/data_cleaning/diabetes_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 83,
    "id": "3f53c5e6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 84,
    "id": "2594eadd",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "4                     0.210   50        0  Female  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 85,
    "id": "6765cc54",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "id": "baca3b67",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "id": "4344dd9e",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 88,
    "id": "c7be9df4",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,8 @@
       "memory usage: 60.0 KB\n",
       "\n",
       "\n",
-      "Missing values proportion:  0.49\n"
+      "Missing values proportion (Insulin):  0.49\n",
+      "Missing values proportion (SkinThickness):  0.3\n"
      ]
     }
    ],
@@ -305,12 +306,13 @@
     "\n",
     "# We can see that SkinThickness and Insulin have a lot of missing values\n",
     "diabetes_clean.info()\n",
-    "print('\\n\\nMissing values proportion: ', round(diabetes_clean['Insulin'].isna().sum() / diabetes_clean.shape[0], 2))"
+    "print('\\n\\nMissing values proportion (Insulin): ', round(diabetes_clean['Insulin'].isna().sum() / diabetes_clean.shape[0], 2))\n",
+    "print('Missing values proportion (SkinThickness): ', round(diabetes_clean['SkinThickness'].isna().sum() / diabetes_clean.shape[0], 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "id": "ff30a56f",
    "metadata": {},
    "outputs": [
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "id": "4714cec8",
    "metadata": {},
    "outputs": [],
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "id": "5d308e83",
    "metadata": {},
    "outputs": [
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "id": "11afd121",
    "metadata": {},
    "outputs": [
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 93,
    "id": "359d9029",
    "metadata": {},
    "outputs": [
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "id": "ea526b3e",
    "metadata": {},
    "outputs": [],
@@ -462,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "id": "c666fd7c",
    "metadata": {},
    "outputs": [
@@ -508,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 96,
    "id": "955c39c7",
    "metadata": {},
    "outputs": [
@@ -597,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "id": "5852cede",
    "metadata": {},
    "outputs": [],
@@ -632,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "id": "458c414f",
    "metadata": {},
    "outputs": [
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "id": "844ae151",
    "metadata": {},
    "outputs": [],
@@ -698,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 100,
    "id": "34a9bb84",
    "metadata": {},
    "outputs": [
@@ -733,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 101,
    "id": "39b19d1c",
    "metadata": {},
    "outputs": [
@@ -812,6 +814,9 @@
     "# It's always better to visualize the data and outliers to get a better understanding.\n",
     "# We can see that we got too many outliers in the SkinThickness column, more than 10% of the data.\n",
     "# And now we see that the SkinThikness graph has a high peak, which makes outliers borders of IQR method too narrow.\n",
+    "\n",
+    "# NB The SkinThickness column has such a high peak due to us replacing missing values with median value.\n",
+    "# That is the point where we consider whether to drop the column or not.\n",
     "\n",
     "for col in fill_data.columns[:-1]:\n",
     "    ax = sns.histplot(data=fill_data, x=col, hue='Outcome', element='step', kde=True, stat='density')\n",
